deps/v8/test/message/syntactic-tail-call-in-extends.out
*%(basename)s:9: SyntaxError: Tail call expression is not allowed here
  return class A extends continue f() {};
                         ^^^^^^^^^^^^
SyntaxError: Tail call expression is not allowed here
